--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
+  "git.ignoreLimitWarning": true,
   "codedeploy.region": "us-east-1",
   "codedeploy.applicationName": "seesee",
   "codedeploy.isApplicationWorkspace": true,
@@ -8,32 +9,35 @@
       "upOnly": true,
       "localPath": "/home/dany/projects/github/seesee/platforms/pwa/",
       "remotePath": "ubuntu@34.234.108.25:/home/ubuntu/seesee/pwa",
-      "exclude": ["**/.git", "**/.vscode", "**/.cache", "**/build", "**/node_modules", "**/x"],
+      "exclude": ["**/.git", "**/.vscode", "**/.cache", "**/build", "**/node_modules", "**/x"]
     },
     {
       "name": "development",
       "upOnly": true,
       "localPath": "/home/dany/projects/github/seesee/",
       "remotePath": "ubuntu@34.234.108.25:/home/ubuntu/seesee/development",
-      "exclude": ["**/.git", "**/.vscode", "**/.cache", "**/assets", "**/build", "**/node_modules", "**/pwa", "**/docker-compose.prod.yml", "**/docker-compose.staged.yml", "**/x"],
+      "exclude": ["**/.git", "**/.vscode", "**/.cache", "**/assets", "**/build", "**/node_modules", "**/pwa", "**/docker-compose.prod.yml", "**/docker-compose.staged.yml", "**/x"]
     },
     {
       "name": "staged",
       "upOnly": true,
       "localPath": "/home/dany/projects/github/seesee/",
       "remotePath": "ubuntu@34.234.108.25:/home/ubuntu/seesee/staged",
-      "exclude": ["**/.git", "**/.vscode", "**/.cache", "**/assets", "**/build", "**/node_modules", "**/pwa", "**/docker-compose.dev.yml", "**/docker-compose.prod.yml", "**/x"],
+      "exclude": ["**/.git", "**/.vscode", "**/.cache", "**/assets", "**/build", "**/node_modules", "**/pwa", "**/docker-compose.dev.yml", "**/docker-compose.prod.yml", "**/x"]
     },
     {
       "name": "production",
       "upOnly": true,
       "localPath": "/home/dany/projects/github/seesee/",
       "remotePath": "ubuntu@34.234.108.25:/home/ubuntu/seesee/production",
-      "exclude": ["**/.git", "**/.vscode", "**/.cache", "**/assets", "**/build", "**/node_modules", "**/pwa", "**/docker-compose.dev.yml", "**/docker-compose.staged.yml", "**/x"],
-    },
+      "exclude": ["**/.git", "**/.vscode", "**/.cache", "**/assets", "**/build", "**/node_modules", "**/pwa", "**/docker-compose.dev.yml", "**/docker-compose.staged.yml", "**/x"]
+    }
   ],
-  "git.ignoreLimitWarning": true,
-  "favorites.storageFilePath": "../../working/.favorites.json",
-  "search.exclude": { "**/x": true, "**/build": true, "**/node_modules": true, "**/yarn-error.log": true, "**/yarn.lock": true },
-  // "remoteAuthority": "wsl+Ubuntu",
+  "search.exclude": {
+    "**/x": true,
+    "**/build": true,
+    "**/node_modules": true,
+    "**/yarn-error.log": true,
+    "**/yarn.lock": true
+  }
 }
