--- a/.travis/.travis.yml
+++ b/.travis/.travis.yml
@@ -19,3 +19,15 @@ after_success:
   — docker push danydodson/multi-nginx
   — docker push danydodson/multi-server
   — docker push danydodson/multi-client
+
+# from react-pwa app
+# language: node_js
+# node_js:
+#   - "10.5"
+# cache:
+#   directories:
+#     - "node_modules"
+# branches:
+#   only:
+#     - dev
+#     - master
