--- a/platform/pwa/.dockerignore
+++ b/platform/pwa/.dockerignore
@@ -20,18 +20,23 @@ pids
 node_modules/*
 jspm_packages/*
 
+# Typescript v1 declaration files
+typings/
+
 # yarn files
 .yarn-integrity
 
 # dotenv files
 .env
+.env.dev
+.env.prod
 .env.local
-.env.development.local
-.env.test.local
-.env.production.local
 
 # misc
 .DS_Store
 
-# typescript files
-typings/
+# Ignore sass cache
+.sass-cache
+
+# ignore config assets
+src/config/assets.js
