--- a/services/users/.gitignore
+++ b/services/users/.gitignore
@@ -25,10 +25,9 @@ jspm_packages/*
 
 # dotenv files
 .env
+.env.dev
+.env.prod
 .env.local
-.env.development.local
-.env.test.local
-.env.production.local
 
 # misc
 .DS_Store
