--- a/platform/pwa/package.json
+++ b/platform/pwa/package.json
@@ -5,12 +5,11 @@
   "description": "seesee.space progressive web app",
   "license": "MIT",
   "scripts": {
-    "start": "pawjs --no-cache --env=development start",
-    "build": "pawjs --no-cache --env-config-path=./.env.dev --env=production build && mv dist build",
-    "prod": "pawjs --no-cache --env-config-path=./.env.prod --env=production build && mv dist build",
-    "lint": "pawjs lint",
-    "test": "pawjs --no-cache test",
-    "clean": "rm -rf build && rm -rf node_modules && yarn install && yarn build"
+    "build": "pawjs --no-cache --env-config-path=./.env --env=production build",
+    "serve": "pawjs --no-cache --env-config-path=./.env --env=development start",
+    "start": "pawjs --no-cache --env-config-path=./.env --env=production start",
+    "clean": "rm -rf build && rm -rf node_modules && yarn install && yarn build",
+    "test": "pawjs --no-cache test"
   },
   "dependencies": {
     "@pawjs/image-optimizer": "^2.2.6",
@@ -22,7 +21,6 @@
     "@types/react-dom": "^16.9.6",
     "bulma": "^0.8.2",
     "cloudinary": "^1.21.0",
-    "eslint-import-resolver-webpack": "^0.12.1",
     "fork-ts-checker-webpack-plugin": "^4.1.3",
     "prop-types": "^15.7.2",
     "universal-fetch": "^1.0.0"
