--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,44 +1,48 @@
 {
+  "eslint.enable": false,
+  // 
   "git.ignoreLimitWarning": true,
+  // 
+  "search.exclude": {
+    "**/*.log": true,
+    "**/build": true,
+    "**/dist": true,
+    "**/yarn.lock": true,
+    "**/node_modules": true
+  },
+  //
   "codedeploy.region": "us-east-1",
   "codedeploy.applicationName": "seesee",
   "codedeploy.isApplicationWorkspace": true,
+  // 
   "sync-rsync.sites": [
     {
       "name": "pwa",
       "upOnly": true,
       "localPath": "/home/dany/projects/seesee/platforms/pwa/",
       "remotePath": "ubuntu@34.234.108.25:/home/ubuntu/seesee/pwa",
-      "exclude": ["**/.git", "**/.vscode", "**/.cache", "**/build", "**/node_modules", "**/x"]
+      "exclude": ["**/.git", "**/.vscode", "**/dist", "**/node_modules"]
     },
     {
       "name": "development",
       "upOnly": true,
       "localPath": "/home/dany/projects/seesee/",
       "remotePath": "ubuntu@34.234.108.25:/home/ubuntu/seesee/development",
-      "exclude": ["**/.git", "**/.vscode", "**/.cache", "**/assets", "**/build", "**/node_modules", "**/pwa", "**/docker-compose.prod.yml", "**/docker-compose.staged.yml", "**/x"]
+      "exclude": ["**/.git", "**/.vscode", "**/build", "**/node_modules", "**/pwa", "**/docker-compose.prod.yml", "**/docker-compose.staged.yml"]
     },
     {
       "name": "staged",
       "upOnly": true,
       "localPath": "/home/dany/projects/seesee/",
       "remotePath": "ubuntu@34.234.108.25:/home/ubuntu/seesee/staged",
-      "exclude": ["**/.git", "**/.vscode", "**/.cache", "**/assets", "**/build", "**/node_modules", "**/pwa", "**/docker-compose.dev.yml", "**/docker-compose.prod.yml", "**/x"]
+      "exclude": ["**/.git", "**/.vscode", "**/build", "**/node_modules", "**/pwa", "**/docker-compose.dev.yml", "**/docker-compose.prod.yml"]
     },
     {
       "name": "production",
       "upOnly": true,
       "localPath": "/home/dany/projects/seesee/",
       "remotePath": "ubuntu@34.234.108.25:/home/ubuntu/seesee/production",
-      "exclude": ["**/.git", "**/.vscode", "**/.cache", "**/assets", "**/build", "**/node_modules", "**/pwa", "**/docker-compose.dev.yml", "**/docker-compose.staged.yml", "**/x"]
+      "exclude": ["**/.git", "**/.vscode", "**/build", "**/node_modules", "**/pwa", "**/docker-compose.dev.yml", "**/docker-compose.staged.yml"]
     }
-  ],
-  "search.exclude": {
-    "**/x": true,
-    "**/build": true,
-    "**/node_modules": true,
-    "**/yarn-error.log": true,
-    "**/yarn.lock": true
-  },
-  "eslint.enable": true
+  ]
 }
