--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,6 @@
-# logs
-logs/*
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
 
-# testing
-coverage
-
-# production
-build/*
-
-# runtime
-pids
-*.pid
-*.seed
-*.pid.lock
-
-# dependencies
-node_modules/*
-jspm_packages/*
-
-# yarn files
-.yarn-integrity
-
-# dotenv files
+# dotenv
 .env
-.env.dev
-.env.prod
-.env.local
 
 # misc
 .DS_Store
