--- a/platforms/pwa/package.json
+++ b/platforms/pwa/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "seesee-platform-pwa",
+  "name": "seesee-platforms-pwa",
   "version": "1.0.0",
   "author": "Dany Dodson",
   "description": "seesee.space progressive web app",
