--- a/platforms/pwa/nginx/nginx.conf
+++ b/platforms/pwa/nginx/nginx.conf
@@ -1,17 +1,21 @@
 server {
 
-  listen 80 default_server;
+  listen 80;
+  server_name _;
+ 
+  # listen 80 default_server;
 
   root /usr/share/nginx/html;
-  
   index index.html index.htm;
+  
+  # include /etc/nginx/conf.d/*.conf;
 
   location / {
     try_files $uri /index.html;
   }
 
-  location /gallery {
-    proxy_pass http://server:4000;
-  }
+  # location /gallery {
+  #   proxy_pass http://gateway_proxy:3050;
+  # }
 
 }
