--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,15 +2,14 @@
   "eslint.enable": true,
   // 
   "git.ignoreLimitWarning": true,
-  // 
+  //
   "search.exclude": {
     "**/*.log": true,
     "**/build": true,
     "**/dist": true,
-    "**/yarn.lock": true,
     "**/node_modules": true
   },
-  //
+  // 
   "codedeploy.region": "us-east-1",
   "codedeploy.applicationName": "seesee",
   "codedeploy.isApplicationWorkspace": true,
@@ -28,21 +27,45 @@
       "upOnly": true,
       "localPath": "/home/dany/projects/seesee/",
       "remotePath": "ubuntu@34.234.108.25:/home/ubuntu/seesee/development",
-      "exclude": ["**/.git", "**/.vscode", "**/build", "**/node_modules", "**/pwa", "**/docker-compose.prod.yml", "**/docker-compose.staged.yml"]
+      "exclude": [
+        "**/.git",
+        "**/.vscode",
+        "**/build",
+        "**/node_modules",
+        "**/pwa",
+        "**/docker-compose.prod.yml",
+        "**/docker-compose.staged.yml"
+      ]
     },
     {
       "name": "staged",
       "upOnly": true,
       "localPath": "/home/dany/projects/seesee/",
       "remotePath": "ubuntu@34.234.108.25:/home/ubuntu/seesee/staged",
-      "exclude": ["**/.git", "**/.vscode", "**/build", "**/node_modules", "**/pwa", "**/docker-compose.dev.yml", "**/docker-compose.prod.yml"]
+      "exclude": [
+        "**/.git",
+        "**/.vscode",
+        "**/build",
+        "**/node_modules",
+        "**/pwa",
+        "**/docker-compose.dev.yml",
+        "**/docker-compose.prod.yml"
+      ]
     },
     {
       "name": "production",
       "upOnly": true,
       "localPath": "/home/dany/projects/seesee/",
       "remotePath": "ubuntu@34.234.108.25:/home/ubuntu/seesee/production",
-      "exclude": ["**/.git", "**/.vscode", "**/build", "**/node_modules", "**/pwa", "**/docker-compose.dev.yml", "**/docker-compose.staged.yml"]
+      "exclude": [
+        "**/.git",
+        "**/.vscode",
+        "**/build",
+        "**/node_modules",
+        "**/pwa",
+        "**/docker-compose.dev.yml",
+        "**/docker-compose.staged.yml"
+      ]
     }
   ]
 }
