--- a/gateway/client/Dockerfile
+++ b/gateway/client/Dockerfile
@@ -16,7 +16,7 @@ USER node
 
 RUN sh -c "$(curl -fsSL https://raw.githubusercontent.com/robbyrussell/oh-my-zsh/master/tools/install.sh)"
 
-COPY dotfiles/.zshrc .
+COPY .zsh/.zshrc .
 COPY yarn.lock app
 COPY package.json app
 
