--- a/gateway/proxy/services/posts.conf
+++ b/gateway/proxy/services/posts.conf
@@ -1,47 +1,17 @@
-location /posts/status {
+location /gallery {
     proxy_set_header Host $http_host;
     proxy_redirect off;
-    proxy_pass http://posts_service;
+    proxy_pass http://gateway_client;
 }
 
-location /api/posts/testing {
+location /gallery/listing {
     proxy_set_header Host $http_host;
     proxy_redirect off;
-    proxy_pass http://posts_service;
+    proxy_pass http://gateway_client;
 }
 
-location /api/posts/all {
+location /gallery/comments/listing {
     proxy_set_header Host $http_host;
     proxy_redirect off;
-    proxy_pass http://posts_service;
-}
-
-location /api/posts/create {
-    proxy_set_header Host $http_host;
-    proxy_redirect off;
-    proxy_pass http://posts_service;
-}
-
-location /api/posts/see {
-    proxy_set_header Host $http_host;
-    proxy_redirect off;
-    proxy_pass http://posts_service;
-}
-
-location /api/posts/edit {
-    proxy_set_header Host $http_host;
-    proxy_redirect off;
-    proxy_pass http://posts_service;
-}
-
-location /api/posts/comments {
-    proxy_set_header Host $http_host;
-    proxy_redirect off;
-    proxy_pass http://posts_service;
-}
-
-location /api/posts/likes {
-    proxy_set_header Host $http_host;
-    proxy_redirect off;
-    proxy_pass http://posts_service;
+    proxy_pass http://gateway_client;
 }
