--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,15 +1,6 @@
 {
   "eslint.enable": true,
-  // 
-  "git.ignoreLimitWarning": true,
   //
-  "search.exclude": {
-    "**/*.log": true,
-    "**/build": true,
-    "**/dist": true,
-    "**/node_modules": true
-  },
-  // 
   "codedeploy.region": "us-east-1",
   "codedeploy.applicationName": "seesee",
   "codedeploy.isApplicationWorkspace": true,
@@ -20,20 +11,25 @@
       "upOnly": true,
       "localPath": "/home/dany/projects/seesee/platforms/pwa/",
       "remotePath": "ubuntu@34.234.108.25:/home/ubuntu/seesee/pwa",
-      "exclude": ["**/.git", "**/.vscode", "**/dist", "**/node_modules"]
+      "exclude": [
+        "**/.git",
+        "**/.vscode",
+        "**/dist",
+        "**/node_modules"
+      ]
     },
     {
-      "name": "development",
+      "name": "production",
       "upOnly": true,
       "localPath": "/home/dany/projects/seesee/",
-      "remotePath": "ubuntu@34.234.108.25:/home/ubuntu/seesee/development",
+      "remotePath": "ubuntu@34.234.108.25:/home/ubuntu/seesee/production",
       "exclude": [
         "**/.git",
         "**/.vscode",
         "**/build",
         "**/node_modules",
         "**/pwa",
-        "**/docker-compose.prod.yml",
+        "**/docker-compose.dev.yml",
         "**/docker-compose.staged.yml"
       ]
     },
@@ -53,19 +49,37 @@
       ]
     },
     {
-      "name": "production",
+      "name": "development",
       "upOnly": true,
       "localPath": "/home/dany/projects/seesee/",
-      "remotePath": "ubuntu@34.234.108.25:/home/ubuntu/seesee/production",
+      "remotePath": "ubuntu@34.234.108.25:/home/ubuntu/seesee/development",
       "exclude": [
         "**/.git",
         "**/.vscode",
         "**/build",
         "**/node_modules",
         "**/pwa",
-        "**/docker-compose.dev.yml",
+        "**/docker-compose.prod.yml",
         "**/docker-compose.staged.yml"
       ]
     }
-  ]
+  ],
+  // 
+  "search.exclude": {
+    "**/node_modules": true,
+    "**/*.log": true,
+    "**/build": true,
+    "**/dist": true,
+  },
+  // 
+  "git.ignoreLimitWarning": true,
+  "files.exclude": {
+    "**/.git": true,
+    "**/.svn": true,
+    "**/.hg": true,
+    "**/CVS": true,
+    "**/.DS_Store": true,
+    ".vscode": true
+  },
+  "explorerExclude.backup": null,
 }
