--- a/gateway/proxy/nginx.conf
+++ b/gateway/proxy/nginx.conf
@@ -7,17 +7,17 @@ http {
     server gateway_client:4000;
   }
 
-  upstream users_service {
-    server users_service:5000;
-  }
+  # upstream users_service {
+  #   server users_service:5000;
+  # }
 
-  upstream profiles_service {
-    server profiles_service:6000;
-  }
+  # upstream profiles_service {
+  #   server profiles_service:6000;
+  # }
 
-  upstream posts_service {
-    server posts_service:7000;
-  }
+  # upstream posts_service {
+  #   server posts_service:7000;
+  # }
 
   access_log /var/log/nginx/access.log;
   error_log /var/log/nginx/error.log;
