--- a/gateway/client/package.json
+++ b/gateway/client/package.json
@@ -9,7 +9,7 @@
     "build": "yarn clean && yarn install && npx babel . -d build",
     "serve": "node build/src/index.js",
     "start": "babel-watch src/index.js -m '⏳⏳ [ - - - - - restarting - - - - - ] ⏳⏳'",
-    "clean": "rm -rf build && rm -rf node_modules && rm -rf logs"
+    "clean": "rm -rf build && rm -rf node_modules && rm -rf logs && rm -rf yarn.lock"
   },
   "dependencies": {
     "core-js": "3.6.5",
@@ -22,12 +22,12 @@
     "helmet": "^3.23.3",
     "is-docker": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.26",
+    "mongoose": "^5.9.27",
     "winston": "^3.3.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.10.5",
-    "@babel/core": "^7.10.5",
+    "@babel/core": "^7.11.0",
     "@babel/preset-env": "^7.10.4",
     "babel-plugin-module-resolver": "^4.0.0",
     "babel-watch": "^7.0.0"
