--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,28 @@
 {
   "eslint.enable": true,
-  // "git.enableStatusBarSync": false,
-  // "git.ignoreLimitWarning": true,
-  //
+  "git.enableStatusBarSync": false,
   // "codedeploy.region": "us-east-1",
   // "codedeploy.applicationName": "seesee",
   // "codedeploy.isApplicationWorkspace": true,
+  // 
+  "rest-client.environmentVariables": {
+    "$shared": {
+      "version": "v1",
+      "prodToken": "foo",
+      "nonProdToken": "bar"
+    },
+    "local": {
+      "version": "v2",
+      "host": "localhost",
+      "token": "{{$shared nonProdToken}}",
+      "secretKey": "devSecret"
+    },
+    "production": {
+      "host": "example.com",
+      "token": "{{$shared prodToken}}",
+      "secretKey": "prodSecret"
+    }
+  },
   // 
   "sync-rsync.sites": [
     {
@@ -67,17 +84,16 @@
     }
   ],
   // 
+  "files.exclude": {
+    "**/.hg": true,
+    "**/.git": true,
+    "**/.svn": true,
+  },
+  // 
   "search.exclude": {
-    "**/node_modules": true,
     "**/*.log": true,
     "**/build": true,
     "**/dist": true,
-  },
-  // 
-  "files.exclude": {
-    "**/.git": true,
-    "**/.svn": true,
-    "**/.hg": true,
-    // "**/CVS": true,
+    "**/node_modules": true,
   },
 }
