--- a/gateway/proxy/Dockerfile
+++ b/gateway/proxy/Dockerfile
@@ -4,4 +4,5 @@ RUN rm -rf /etc/nginx/conf.d/*
 
 COPY nginx.conf /etc/nginx/nginx.conf
 
-COPY services/* /etc/nginx/conf.d/
+COPY conf.d/* /etc/nginx/conf.d/
+
