--- a/gateway/proxy/conf.d/user.conf
+++ b/gateway/proxy/conf.d/user.conf
@@ -1,8 +1,9 @@
 location /user {
-    proxy_set_header Host gateway_proxy/user;
-    proxy_pass http://gateway_client;
+    proxy_set_header Host $http_host;
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_pass http://gateway_client;
+    proxy_redirect off;
     client_max_body_size 10m;
     client_body_buffer_size 128k;
     proxy_connect_timeout 600;
@@ -13,8 +14,6 @@ location /user {
     proxy_buffers 4 256k;
     proxy_busy_buffers_size 256k;
     proxy_temp_file_write_size 256k;
-    # proxy_set_header Host $http_host;
-    # proxy_redirect off;
 }
 
 # location /user/signup {
@@ -30,7 +29,8 @@ location /user {
 # }
 
 # location /user {
-#     # proxy_pass gateway_client:4000/;
+#     proxy_set_header Host gateway_proxy/user;
+#     proxy_pass http://gateway_client;
 #     proxy_set_header X-Real-IP $remote_addr;
 #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 #     client_max_body_size 10m;
@@ -43,4 +43,6 @@ location /user {
 #     proxy_buffers 4 256k;
 #     proxy_busy_buffers_size 256k;
 #     proxy_temp_file_write_size 256k;
+    # proxy_set_header Host $http_host;
+    # proxy_redirect off;
 # }
