--- a/services/users/package.json
+++ b/services/users/package.json
@@ -12,6 +12,7 @@
     "clean": "rm -rf build && rm -rf node_modules && rm -rf logs && rm -rf yarn.lock"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "core-js": "3.6.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
