--- a/gateway/conf/nginx.conf
+++ b/gateway/conf/nginx.conf
@@ -20,12 +20,24 @@ http {
 
   server {
     listen 80;
+    listen 443 ssl;
+  
+    ssl_certificate /etc/ssl/certificate.crt; 
+    ssl_certificate_key /etc/ssl/private.key;
+    
+    server_name seesee.space www.seesee.space;
 
     location / {
       default_type text/html;
       content_by_lua '
         ngx.say("<p>hello</p>")
       ';
+    }
+
+    location /users {
+      proxy_pass http://users-api:3000;
+      proxy_set_header X-Forwarded-For $remote_addr;
+      proxy_set_header Host $http_host;
     }
 
     location /secure/ {
