--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "1.0.0",
   "main": "n/a",
   "scripts": {
-    "prod-build": "docker-compose build",
-    "prod-up": "docker-compose up -d",
-    "prod-down": "docker-compose down",
-    "prod-uninstall": "docker-compose down --rmi all",
-    "prod-connect-api": "docker exec -it docker_api_1 /bin/sh",
-    "prod-connect-db": "psql -h localhost -p 5431 -U myappuser -d myappdb",
+    "build": "docker-compose build",
+    "up": "docker-compose up -d",
+    "down": "docker-compose down",
+    "uninstall": "docker-compose down --rmi all",
+    "connect-api": "docker exec -it docker_api_1 /bin/sh",
+    "connect-db": "psql -h localhost -p 5431 -U myappuser -d myappdb",
     "dev-build": "docker-compose -f docker-compose-dev.yml build",
     "dev-up": "docker-compose -f docker-compose-dev.yml up -d",
     "dev-down": "docker-compose -f docker-compose-dev.yml down",
