--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,3 @@
-# other
-.vscode/*
-assets/*
-
 # logs
 logs/*
 npm-debug.log*
@@ -21,7 +17,7 @@ pids
 *.pid.lock
 
 # dependencies
-node_modules/*
+**/node_modules/*
 jspm_packages/*
 
 # yarn files
@@ -33,7 +29,10 @@ jspm_packages/*
 .env.prod
 .env.local
 
-# misc
-.DS_Store
-**/node_modules
+# certs
 gateway/certs/*
+
+# misc
+.vscode/*
+assets/*
+.DS_Store
