--- a/gateway/conf/nginx.conf
+++ b/gateway/conf/nginx.conf
@@ -9,7 +9,6 @@ events {
 env JWT_SECRET;
 
 http {
-
   log_format main '$remote_addr - $remote_user [$time_local] "$request" '
                   '$status $body_bytes_sent "$http_referer" '
                   '"$http_user_agent" "$http_x_forwarded_for"';
@@ -20,7 +19,10 @@ http {
 
   server {
     listen 80;
+    listen [::]:80;
+
     listen 443 ssl;
+    listen [::]:443 ssl;
   
     ssl_certificate /etc/ssl/certificate.crt; 
     ssl_certificate_key /etc/ssl/private.key;
@@ -29,20 +31,21 @@ http {
 
     location / {
       default_type text/html;
-      content_by_lua '
-        ngx.say("<p>hello</p>")
-      ';
+      root /usr/local/openresty/nginx/html;
+      index index.html;
+      # content_by_lua '
+      #   ngx.say("<p>hello</p>")
+      # ';
     }
 
-    location /users {
+    location /users/ {
       proxy_pass http://users-api:3000;
       proxy_set_header X-Forwarded-For $remote_addr;
       proxy_set_header Host $http_host;
     }
 
-    location /secure/ {
+    location /profile/ {
       access_by_lua_file /bearer.lua;
-
       default_type text/plain;
         echo "<p>i am protected by jwt<p>";
     }
