--- a/package.json
+++ b/package.json
@@ -3,19 +3,21 @@
   "version": "1.0.0",
   "main": "n/a",
   "scripts": {
-    "build": "docker-compose build",
-    "up": "docker-compose up -d",
-    "down": "docker-compose down",
-    "uninstall": "docker-compose down --rmi all",
-    "connect-api": "docker exec -it docker_api_1 /bin/sh",
-    "connect-db": "psql -h localhost -p 5431 -U myappuser -d myappdb",
     "dev-build": "docker-compose -f docker-compose-dev.yml build",
-    "dev-up": "docker-compose -f docker-compose-dev.yml up -d",
+    "dev-up": "docker-compose -f docker-compose-dev.yml up --build -d",
     "dev-down": "docker-compose -f docker-compose-dev.yml down",
     "dev-uninstall": "docker-compose -f docker-compose-dev.yml down --rmi all",
     "dev-connect-api": "docker exec -it docker_api_1 /bin/sh",
-    "dev-connect-db": "psql -h localhost -p 5431 -U myappuser -d myappdb"
+    "dev-connect-db": "psql -h localhost -p 5431 -U myappuser -d myappdb",
+    "dev-reload-nginx": "docker container exec gateway-proxy nginx -s reload",
+    "dev-reload-nginx-2": "docker kill -s HUP gateway-proxy",
+    "prod-build": "docker-compose build",
+    "prod-up": "docker-compose up -d",
+    "prod-down": "docker-compose down",
+    "prod-uninstall": "docker-compose down --rmi all",
+    "prod-connect-api": "docker exec -it docker_api_1 /bin/sh",
+    "prod-connect-db": "psql -h localhost -p 5431 -U myappuser -d myappdb"
   },
-  "author": "Dany Dodson",
-  "license": "MIT"
+  "license": "MIT",
+  "author": "Dany Dodson"
 }
