--- a/gateway/nginx/nginx.conf
+++ b/gateway/nginx/nginx.conf
@@ -36,6 +36,9 @@ http {
       content_by_lua_file /test.lua;
     }
    
+    # try:
+    # use users-api js to create jwt and then user verify.lua for every request ...
+
     location = /register/ {
       proxy_pass http://users-api/api/v1/auth/register/;
       content_by_lua_file /sign.lua;
